# openrender

./: CMakeLists.txt  CMakePresets.json  README.md
demo/: CMakeLists.txt
demo/src/: Main.cpp
renderer/: CMakeLists.txt
renderer/include/openrenderer/: renderer.hpp  resources.hpp
renderer/src/backends/gl/: gl_rhi.cpp  gl_rhi.hpp
renderer/src/core/: renderer.cpp
renderer/src/rhi/: rhi.hpp
